fourth commit use a router

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,41 @@
-.App {
-  text-align: center;
+.allElements{
+  display: inline-flex;
+  width:64vw;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.bottomLine{
+  border-bottom: 2px solid rgba(128, 128, 128, 0.801);
+  margin-top:8vw;
+  height:2.7vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tabBar
+{
+list-style-type:none;
+display:inline;
+text-align:justify;
+padding-right:2vw;
+padding-left:2vw;
+font-size:1.5vw;  
+font-weight:bold;
+text-align:center; 
+color:grey !important; 
 }
 
-.App-link {
-  color: #61dafb;
+a
+{
+  color:grey;
+  
+  
+}
+a:active{
+  
+  border-style: solid;
+  border-bottom: 2px;
+  border-color: grey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:hover{
+  text-decoration: none;
+  color:#f67b30;
 }
